# ros2-b-mutra

./: .env  .gitignore  README.md  README_TAMPERING_EXPERIMENTS.md  bootstrap_ref_measurements.py  cleanup.sh  collect_blockchain_stats_idle.py  create_agent_config.py  create_agent_configurations.py  create_experimental_scenario.py  deploy_sc.sh  deploy_smart_contract.sh  docker-compose-old.yml  docker-compose.attestation.yml  docker-compose.benchmark-collector.yml  docker-compose.formation.yml  docker-compose.monitoring.yml  docker-compose.orchestrator.yml  docker-compose.robots.yml  docker-compose.secaas.yml  docker-compose.yml  generate_compose.py  init-db.sql  run_benchmark.py  run_experiments_and_collect_blockchain_stats.py  run_experiments_and_collect_results.py  run_experiments_and_collect_robot_stats.py  run_experiments_and_collect_tamper_detection.py  run_full_experiment.sh  run_full_experiment_live.sh  run_full_experiment_test.sh  run_sc_benchmark.sh  run_sc_benchmark_parallel.sh  start.sh  stop.sh  stop_full_experiment.sh
.claude/: settings.json
blockchain/: quorum_dev_quickstart.sh
checkpoints/: reset_event_watcher.sh
config/: Agent_1.json  Agent_2.json  Agent_3.json  Agent_4.json  Agent_5.json  Agent_6.json  Agent_7.json  Agent_8.json  Agent_9.json  README.md  Secaas.json  robot1.json  robot10.json  robot100.json  robot11.json  robot12.json  robot13.json  robot14.json  robot15.json  robot16.json  robot17.json  robot18.json  robot19.json  robot2.json  robot20.json  robot21.json  robot22.json  robot23.json  robot24.json  robot25.json  robot26.json  robot27.json  robot28.json  robot29.json  robot3.json  robot30.json  robot31.json  robot32.json  robot33.json  robot34.json  (+72 more)
config-dummy/: robot1.json  robot10.json  robot100.json  robot11.json  robot12.json  robot13.json  robot14.json  robot15.json  robot16.json  robot17.json  robot18.json  robot19.json  robot2.json  robot20.json  robot21.json  robot22.json  robot23.json  robot24.json  robot25.json  robot26.json  robot27.json  robot28.json  robot29.json  robot3.json  robot30.json  robot31.json  robot32.json  robot33.json  robot34.json  robot35.json  robot36.json  robot37.json  robot38.json  robot39.json  robot4.json  robot40.json  robot41.json  robot42.json  robot43.json  robot44.json  (+61 more)
dockerfiles/: Makefile
dockerfiles/turtlebot3/src/c_example_package/: CMakeLists.txt  package.xml
dockerfiles/turtlebot3/src/c_example_package/launch/: dummy_publisher.launch.py
dockerfiles/turtlebot3/src/formation_agent/: CMakeLists.txt  package.xml
dockerfiles/turtlebot3/src/formation_agent/launch/: formation_agent.launch.py
dockerfiles/turtlebot3/src/formation_agent/src/: formation_agent.cpp
dockerfiles/turtlebot3/src/mission_agent/: CMakeLists.txt  package.xml
dockerfiles/turtlebot3/src/mission_agent/launch/: mission_agent.launch.py
dockerfiles/turtlebot3/src/mission_agent/src/: mission_agent.cpp
experiments/: robot1-prover.csv  robot1-verifier.csv
jsonfiles/: memory_storage.json  robot1.json  robot2.json  robot3.json
measurements/: robot10_measurements.json  robot11_measurements.json  robot12_measurements.json  robot13_measurements.json  robot14_measurements.json  robot15_measurements.json  robot16_measurements.json  robot17_measurements.json  robot18_measurements.json  robot19_measurements.json  robot1_measurements.json  robot20_measurements.json  robot21_measurements.json  robot22_measurements.json  robot23_measurements.json  robot24_measurements.json  robot25_measurements.json  robot26_measurements.json  robot27_measurements.json  robot28_measurements.json  robot29_measurements.json  robot2_measurements.json  robot30_measurements.json  robot31_measurements.json  robot32_measurements.json  robot3_measurements.json  robot4_measurements.json  robot5_measurements.json  robot6_measurements.json  robot7_measurements.json  robot8_measurements.json  robot9_measurements.json
ref-measurements/: robot1.json  robot10.json  robot100.json  robot11.json  robot12.json  robot13.json  robot14.json  robot15.json  robot16.json  robot17.json  robot18.json  robot19.json  robot2.json  robot20.json  robot21.json  robot22.json  robot23.json  robot24.json  robot25.json  robot26.json  robot27.json  robot28.json  robot29.json  robot3.json  robot30.json  robot31.json  robot32.json  robot33.json  robot34.json  robot35.json  robot36.json  robot37.json  robot38.json  robot39.json  robot4.json  robot40.json  robot41.json  robot42.json  robot43.json  robot44.json  (+60 more)
ref-measurements-dummy/: robot1.json  robot10.json  robot12.json  robot14.json  robot15.json  robot16.json  robot19.json  robot21.json  robot25.json  robot27.json  robot29.json  robot30.json  robot32.json  robot33.json  robot35.json  robot36.json  robot37.json  robot39.json  robot4.json  robot41.json  robot43.json  robot44.json  robot45.json  robot46.json  robot47.json  robot49.json  robot5.json  robot50.json  robot54.json  robot55.json  robot57.json  robot58.json  robot6.json  robot61.json  robot62.json  robot63.json  robot65.json  robot67.json  robot68.json  robot7.json  (+15 more)
robot_build_tmp/: dummy_publisher  dummy_subscriber  path_robot_publisher.txt  robot_state_publisher
smart-contracts/: deploy.sh  hardhat.config.js  smart-contract.env  truffle-config.js
tests/: rolling-hash-vectors.json  run-tests.sh
tools/: README.md  formation_bag_qos.yaml  formation_metrics.py  gen_arena_map.py  (+5 more)
(+22605 files in other folders)
