<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>formation_agent</name>
  <version>0.0.0</version>
  <description>
    Decentralized formation-control agent for the D-MUTRA swarm experiments. A
    self-contained rclcpp executable (all control logic in its own .text) that
    holds a rigid multi-robot formation toward a global goal using only neighbor
    odometry (Artificial Potential Fields). Its 10 Hz tick loop is the runtime
    tampering target: corrupting it perturbs the published cmd_vel and drags the
    coupled formation off course while remaining inside the attested .text
    section, so swarm-level damage scales with attestation detection latency.
  </description>
  <maintainer email="agent@todo.todo">agent</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
